--- a/server/build.gradle
+++ b/server/build.gradle
@@ -12,7 +12,11 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.0'
 
-    // Testing related dependencies
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core
+    implementation group: 'com.amazonaws', name: 'aws-java-sdk-core', version: '1.12.181'
+
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb
+    implementation group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.547'
 
     // requires test/resources/mockito-extensions/org.mockito.plugins.MockMaker to have content "mock-maker-inline"
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.0.0'
